--- a/software.html
+++ b/software.html
@@ -39,6 +39,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698513680-senior-software-engineer'>Square Senior Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698508963-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qT59VfwM&k=Job&j=oG809fwH&__jvst=Employee+Referral&__jvsd=syBINgwp&__jvsc=Twitter&bid=ncN5pMwK'>The Climate Corporation Careers - Software Engineer, Backend (Multiple levels)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/servicenow/job/oGYrbfw0'>ServiceNow Careers - Staff Software Engineer - Quality Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -55,7 +67,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kalo/493ccd9f-3634-4729-94e8-271c509dbfe0'>Kalo - Senior Front-End Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kalo/493ccd9f-3634-4729-94e8-271c509dbfe0'>Kalo - Senior Front-End Software Engineer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -151,11 +163,11 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oF9jbfw2&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nu0RpMw1'>Jobvite, Inc. Careers - Senior Software Engineer (Platform)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oF9jbfw2&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nu0RpMw1'>Jobvite, Inc. Careers - Senior Software Engineer (Platform)</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999698554130-graduate-software-engineer'>Turnitin, LLC Graduate Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999698554130-graduate-software-engineer'>Turnitin, LLC Graduate Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -175,7 +187,7 @@
 <p><span class="badge badge-light">San Francisco Los Angeles</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698597135-software-engineer-java-jr1008843-'>Broadridge Software Engineer (Java) (JR1008843) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698597135-software-engineer-java-jr1008843-'>Broadridge Software Engineer (Java) (JR1008843) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kansas City, MO</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -207,7 +219,7 @@
 <p><span class="badge badge-light">New York  Canada Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=smYmMgwd&__jvsc=Twitter&bid=nhoLpMw6'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=smYmMgwd&__jvsc=Twitter&bid=nhoLpMw6'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -267,7 +279,7 @@
 <p><span class="badge badge-light">Krak?w Munich</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/slab/1c6fae7c-980e-4875-be9f-76ae1ebfad96?lever-origin=applied&lever-source%5B%5D=Twitter'>Slab - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/slab/1c6fae7c-980e-4875-be9f-76ae1ebfad96?lever-origin=applied&lever-source%5B%5D=Twitter'>Slab - Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -279,7 +291,7 @@
 <p><span class="badge badge-light">Wien, Austria  Vienna London Malm?</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxOEV8BGBoXxHBWNbvIBk@z8-&embedsource=CareerSite'>Sr. Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxOEV8BGBoXxHBWNbvIBk@z8-&embedsource=CareerSite'>Sr. Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -430,18 +442,6 @@
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o98pbfwB&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nM6npMwV'>Benefitfocus Careers - Sr. Software Engineer - AI</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oI1mafwZ&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=n1anpMwe'>ServiceNow Careers - Software Architect (Distinguished Software Engineer) ? Data Integration</a></h5> 
-<p><span class="badge badge-light">San Diego, California  San Diego</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CERN/743999698313206-linux-kernel-software-developer-be-co-ht-2019-112-ld-?trid=33221b55-7baa-4189-992e-a7fac0c08950'>CERN Linux Kernel Software Developer (BE-CO-HT-2019-112-LD) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698552210-software-engineer-intern-part-time-full-time-'>RAKUNA Software Engineer Intern (Part-time/Full-time) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
-<p>Posted on: 2019-10-31</p>
 <hr/>
 
 
