--- a/frontend.html
+++ b/frontend.html
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://masglobalconsulting.applytojob.com/apply/Qa9fJ5Giux/MidSenior-Front-End-DeveloperAngularReactHTML5CSS3'>Mid-Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://masglobalconsulting.applytojob.com/apply/Qa9fJ5Giux/MidSenior-Front-End-DeveloperAngularReactHTML5CSS3'>Mid-Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -132,7 +132,7 @@
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698568158-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698568158-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -140,7 +140,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698560911-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698560911-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -208,7 +208,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -240,7 +240,7 @@
 <p><span class="badge badge-light">Krakow, Poland  Krakow, Poland  Krakow, Poland</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hire.withgoogle.com/public/jobs/faunacom/view/P_AAAAAAJAABiBUOvIo1SfXN'>NodeJS /Front End Developer - Remote, San Francisco or Boston job in Remote at Fauna, Inc.</a></h5> 
+<h5><a href='https://hire.withgoogle.com/public/jobs/faunacom/view/P_AAAAAAJAABiBUOvIo1SfXN'>NodeJS /Front End Developer - Remote, San Francisco or Boston job in Remote at Fauna, Inc.</a></h5> 
 <p><span class="badge badge-light">San Francisco Boston San Francisco Boston</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -256,7 +256,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -272,11 +272,11 @@
 <p><span class="badge badge-light">San Mateo, California  Menlo Park, CA San Mateo, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://homeday.join.com/jobs/471067-frontend-engineer-m-f-x'>Job @ Homeday (Berlin): Frontend Engineer (m/f/x) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://homeday.join.com/jobs/471067-frontend-engineer-m-f-x'>Job @ Homeday (Berlin): Frontend Engineer (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937506'>Job Application for Software Engineer II, Front End at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937506'>Job Application for Software Engineer II, Front End at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -358,7 +358,7 @@
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://funda.recruitee.com/o/frontend-developer-1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://funda.recruitee.com/o/frontend-developer-1'>
       Front-end Developer - Funda
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -386,7 +386,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://bx-cert.ru/job/frontend--66294/'>? ?????-?????????? ????????? Frontend-???????????, ???????? ?? 30000 ??????</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bx-cert.ru/job/frontend--66294/'>? ?????-?????????? ????????? Frontend-???????????, ???????? ?? 30000 ??????</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
